- fixed drawer button alignment - changed social media button size

--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ a:visited {
 #drawer-social-media > a > i {
   justify-self: center;
   align-self: center;
+
+  transform: scale(1.3);
 }
 
 
@@ -91,17 +93,18 @@ a:visited {
   grid-column: 2/3;
   grid-row: 1/2;
 
-  display: grid;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-}
-#header-layout > #drawer-button > i {
   justify-self: end;
   align-self: center;
+  display: grid;
 
-  padding-right: 10px;
+  width: 50px;
+  height: 50px;
 
+  padding: 0;
+}
+#header-layout > #drawer-button > i {
+  justify-self: center;
+  align-self: center;
   transform: scale(3);
 }
 
